tests/semantic_cases/invalid/typed_boolean_arithmetic.ob0
(* INVALID: arithmetic expression uses non-numeric BOOLEAN operand *)
MODULE Main;
VAR flag: BOOLEAN;
VAR x: INTEGER;
BEGIN
  x := flag + 1
END Main.
